--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <script>
     document.addEventListener('DOMContentLoaded', async () => {
-      const apiUrl = 'https://brothertest.pythonanywhere.com/api/hello';
+      const apiUrl = 'https://brotherlofi.pythonanywhere.com/api/hello';
 
       try {
         const response = await fetch(apiUrl);
